--- a/pag2.html
+++ b/pag2.html
@@ -8,43 +8,86 @@
     <link rel="stylesheet" type="text/css" href="estilo.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Login</title>
+    <title>pag2</title>
 </head>
 
 <body class="pg2">
-    <form class="b2">
-        <fieldset>
-            <header class="c2">
-                <legend>
-                    <h1>
-                        Escolha uma opção:
-                        <br><br>
-                    </h1>
-                </legend>
-                <a href="fp.html" class="btn btn-light">
-                    <b>
-                        Ficha de Prontuário
-                    </b>
-                </a>
-                <br>
-                <img src="http://www.rbcp.org.br/imagens/18-02-04-fig01.jpg">
-                <!--ficha de prontuario-->
-                <br><br><br>
-                <a href="fp.html" class="btn btn-light">
-                    <b>
-                        Histórico de Prontuário
-                    </b>
-                </a>
-                <!--historico de ficha-->
-                <br><br><br>
-                <a href="fp.html" class="btn btn-light">
-                    <b>
-                        Receita
-                    </b>
-                </a>
-                 <br><br>
-                <!--receita-->
-            </header>
-        </fieldset>
+    <header class="logouni">
+        <br>
+        <img src="https://cdn.univicosa.com.br/img/logos/novo/univicosa_horizontal.png" width="150" height="41">
+        <br><p class="ab">.</p>
+    </header>
+
+    <br><br>
+    <h2 class="ba">
+        O que deseja fazer agora?
+    </h2>
+    <br><br>
+    <h1 class="zb">..................</h1>
+    <form class="p" action="pag3.html">
+        <p class="inv">.</p>
+        <br>
+        <p class="za">
+            .........
+        </p>
+        <div class="z">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+              </svg>
+        </div>
+        <p class="za">
+          .........
+      </p>
+        <br>
+          <br><br>
+          <p>
+             Cadastrar<br> paciente
+          </p>
     </form>
+    <h1 class="zb">..................</h1>
+    <form class="p">
+        <p class="inv">.</p>
+        <br>
+        <p class="za">
+            .........
+        </p>
+       <div class="z">
+        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-list-check" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
+          </svg>
+       </div>
+       <p class="za">
+        .........
+    </p>
+          <br><br>
+          <p>
+            Ficha de <br>pacientes
+          </p>
+          
+    </form>
+    <h1 class="zb">..................</h1>
+    <form class="p">
+        <p class="inv">.</p>
+        <br>
+        <p class="za">
+            .........
+        </p>
+        <div class="z">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
+                <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
+                <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+              </svg>
+        </div>
+          <p class="za">
+            .........
+        </p>
+          <br><br>
+          <p>
+            Próximas <br>consultas
+          </p>
+    </form>
+    <footer class="fim">
+        <img src="https://play-lh.googleusercontent.com/dwjhi4bErPtRalof28qRURMslGavPhQfMr1V5x-lPedJVbx3cDA0KeUTb2-jUNr5ilI" width="40" height="40">
+    </footer>
 </body>
